<resources>
    <string name="app_name">SketchDraw</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="paintBoard">画板</string>
    <string name="myPainting">作品</string>
    <string name="setting">设置</string>
    <string name="return_btn">返回</string>
    <string name="paint">画笔</string>
    <string name="rotate">旋转</string>
    <string name="zoom">缩放</string>
    <string name="move">移动</string>
    <string name="save">保存</string>
    <string name="exit">退出</string>
    <string name="layer">图层</string>
    <string name="upload">上传</string>
    <string name="delete">删除</string>
    <string name="copy">复制</string>
    <string name="option">G</string>
    <string name="newlayer">N</string>
    <string name="cancel_btn">取消</string>
    <string name="confirm_btn">确定</string>
</resources>
