<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/operate_cancel_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/ic_delete"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="@+id/button_layer_show"
        app:layout_constraintTop_toTopOf="@+id/frameLayout_paint_area" />

    <Button
        android:id="@+id/operate_confirm_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/checkbox_on_background"
        android:visibility="gone"
        app:layout_constraintRight_toLeftOf="@+id/operate_cancel_button"
        app:layout_constraintTop_toTopOf="@+id/frameLayout_paint_area" />

    <FrameLayout
        android:id="@+id/frameLayout_paint_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout_left"
        app:layout_constraintRight_toLeftOf="@+id/linearLayout_right"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.zhangtao103239.sketchdraw.PaintBoard
            android:id="@+id/myPaintBoard_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linerLayout_paint"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bootstrap_dropdown_divider"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/frameLayout_paint_area"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="B" />

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="B" />

        <Button
            android:id="@+id/button19"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="B" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_left"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@color/bootstrap_dropdown_divider"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/paintShowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paint" />

        <Button
            android:id="@+id/paint_rotate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rotate" />

        <Button
            android:id="@+id/paint_scale_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zoom" />

        <Button
            android:id="@+id/paint_translate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move" />

        <Button
            android:id="@+id/paint_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/paint_exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_right"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bootstrap_gray"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout_paint_area"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/operationShowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newlayer" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerLaout_layer_operation"
        android:layout_width="65dp"
        android:layout_height="120dp"
        android:background="@color/bootstrap_gray_light"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/frameLayout_paint_area">

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/upload" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/copy" />

    </LinearLayout>

    <Button
        android:id="@+id/button_layer_show"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="30dp"
        android:layout_height="70dp"
        android:background="@color/bootstrap_well_border_color"
        android:text="@string/layer"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/frameLayout_paint_area"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</android.support.constraint.ConstraintLayout>